# celery-haystack

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  codespell_and_ruff.yml
celery_haystack/: __init__.py  apps.py  conf.py  exceptions.py  handler.py  indexes.py  signals.py  tasks.py  test_settings.py  utils.py
celery_haystack/tests/: models.py  search_indexes.py  tests.py
celery_haystack/tests/settings/: base.py  v1.py  v2.py
docs/: Makefile  changelog.rst  conf.py  index.rst  make.bat
requirements/: v1.txt  v2.txt
tests/: models.py  requirements.txt  runtests.py  settings.py  tox.ini
tests/notes/: models.py  search_indexes.py  tests.py
tests/settings/: v1.py  v2.py
