[global]
setup-hooks =
    celery_haystack.version_hook

[metadata]
name = celery-haystack
author = Jannis Leidel
author-email = jannis@leidel.info
summary = An app for integrating Celery with Haystack.
description-file = README.rst
home-page = http://celery-haystack.rtfd.org/
project-url =
    Github, https://github.com/django-haystack/celery-haystack/
classifier =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Utilities
requires-dist =
    django-appconf>=0.4.1


[files]
packages =
    celery_haystack
    celery_haystack.tests
extra_files =
    README.rst
    AUTHORS

[backwards_compat]
zip_safe = False

[wheel]
universal = 1
